Installing on system

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,4 +4,14 @@ add_library(
     wad.hxx
 )
 
+install(
+    FILES wad.hxx
+    DESTINATION include
+)
+
+install(
+    TARGETS wad
+    DESTINATION lib
+)
+
 add_subdirectory(test)
